kubernetes/apps/home-automation/jellyfin/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  labels:
    app: jellyfin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin

    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - name: jellyfin
              containerPort: 8096

          volumeMounts:
            - name: homelab-storage
              mountPath: /config
              subPath: jellyfin/config
            - name: homelab-storage
              mountPath: /cache
              subPath: jellyfin/cache
            - name: homelab-storage
              mountPath: /movies
              subPath: streaming/media/movies
            - name: homelab-storage
              mountPath: /series
              subPath: streaming/media/series
            - name: render-dev
              mountPath: /dev/dri
              readOnly: true

          securityContext:
            privileged: true
          resources:
            limits:
              cpu: 1200m
              memory: 2Gi
            requests:
              cpu: 400m
              memory: 400Mi

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
        - name: render-dev
          hostPath:
            path: /dev/dri
            type: DirectoryOrCreate
