kubernetes/apps/home-automation/jellyfin/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-jellyfin
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 38096
