kubernetes/apps/home-automation/jellyfin/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ugreen-nas-jellyfin-1
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 38096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-jellyfin-1
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 38096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"

spec:
  ingressClassName: external
  tls:
    - hosts:
        - jellyfin.rutberg.dev
      secretName: jellyfin-tls
  rules:
    - host: jellyfin.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ugreen-nas-jellyfin-1
                port:
                  number: 80
